--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-api-query",
   "version": "1.5.2",
-  "description": "💎 Elegant and simple way to build requests for REST API",
+  "description": "💎 Elegant and simple way to build requests for REST API. Fork https://github.com/robsontenorio/vue-api-query",
   "main": "build/index.js",
   "scripts": {
     "build": "babel src -d build",
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/robsontenorio/vue-api-query.git"
+    "url": "git+https://github.com/razdrogov/vue-api-query.git"
   },
   "keywords": [
     "vue",
@@ -28,10 +28,7 @@
   ],
   "author": "Robson Tenório",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/robsontenorio/vue-api-query/issues"
-  },
-  "homepage": "https://github.com/robsontenorio/vue-api-query#readme",
+  "homepage": "https://github.com/razdrogov/vue-api-query#readme",
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
